# anonymous-communication

./: .gitignore  CMakeLists.txt  README.md  client.sh
client/: CMakeLists.txt
client/edl/: enclave.edl
client/settings/: enclave.config.xml
client/trusted/: client_enclave.cpp  client_enclave.h  distributed_agreement_scheme.cpp  distributed_agreement_scheme.h  helpers.h  overlay_structure_scheme.cpp  overlay_structure_scheme.h  routing_scheme.cpp  routing_scheme.h  structures.h
client/trusted/structures/: aad_tuple.h
client/untrusted/: client.cpp  client.h  main.cpp
client/untrusted/network/: network_manager.cpp  network_manager.h
client_interface/: CMakeLists.txt  main.cpp
include/: config.h  cryptlib.cpp  cryptlib.h  errors.h  serialization.h  shared_functions.h  shared_structs.h
server/: CMakeLists.txt
server/edl/: enclave.edl
server/trusted/: server_enclave.cpp  server_enclave.h
server/untrusted/: main.cpp  server.cpp  server.h
server/untrusted/network/: network_manager_server.cpp  network_manager_server.h
test/: client_test.cpp  shared_structs_test.cpp
